--- a/source/html/content/home.html
+++ b/source/html/content/home.html
@@ -1,4 +1,8 @@
-<h1>Home</h1>
 <p>Welcome to <span id="homeLink" style="color:blue; text-decoration:underline;">rextwedt.com</span>.  I'm glad you're here!</p>
-<p></p>
+<p>
+	<div class="home-img-bg">
+		<img src="img/home-hiv.jpg" id="homeImg" alt="Home image">
+	</div>
+</p>
+<p>Medical illustration is...</p>
 <p>Please enjoy the launch of my completely redesigned website!  I will be continuing to update this site, so keep coming back!</p>
