--- a/source/html/content/home.html
+++ b/source/html/content/home.html
@@ -1,8 +1,8 @@
-<p>Welcome to <span id="homeLink" style="color:blue; text-decoration:underline;">rextwedt.com</span>.  I'm glad you're here!</p>
+<p>Welcome to <span id="home-link" >rextwedt.com</span>.  I'm glad you're here!</p>
+<p>Please enjoy the launch of my completely redesigned website!  I will be continuing to update this site, so keep coming back!</p>
 <p>
 	<div class="home-img-bg">
-		<img src="img/home-hiv.jpg" id="homeImg" alt="Home image">
+		<img src="img/pic_home.jpg" id="homeImg" alt="Home image">
 	</div>
 </p>
 <p>Medical illustration is...</p>
-<p>Please enjoy the launch of my completely redesigned website!  I will be continuing to update this site, so keep coming back!</p>
