Formatting on static html pages.

--- a/src/html/content/projects.html
+++ b/src/html/content/projects.html
@@ -1,10 +1,5 @@
-<h1>About Me</h1>
-<div class="about-img-wrap">
-  <div class="about-img-bg">
-    <img src="img/pic_bio.jpg" id="aboutImg" alt="Picture of Rex Twedt III" />
-  </div>
-</div>
-<div class="bio-wrap">
+<h1>Projects</h1>
+<div class="bio-wrapper col-sm-6 col-md-8">
   <p>
     Rex Twedt was just an ordinary kid from Omaha, Nebraska. After graduating
     from Iowa State University with a degree in Biochemistry, he began working
