Project page template.

--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -1,15 +1,59 @@
 <h1>Projects</h1>
-<div class="bio-wrapper col-sm-6 col-md-8">
-  <p>
-    Rex Twedt was just an ordinary kid from Omaha, Nebraska. After graduating
-    from Iowa State University with a degree in Biochemistry, he began working
-    at Cargill as a lab technician.
-  </p>
-  <p>
-    Then, one day... he quit his job at the lab and returned to school. Now, he
-    is a <em>Medical Illustrator</em>! He spends his days creating medical
-    illustrations, using his powers to help the world. When he isn't studying,
-    Rex enjoys reading, playing guitar, and meandering through the museums of
-    Chicago.
-  </p>
+<div class="project-filters">
+  <div class="filter">Animation</div>
+  <div class="filter">Interactive</div>
+  <div class="filter">Illustration</div>
+  <div class="filter">Teaching</div>
+</div>
+<div class="projects-wrap">
+  <div class="project-card">
+    <div class="project-img">
+      <img src="../img/gallery//03_lungs_thumb.jpg" />
+    </div>
+    <div class="project-content">
+      <h1>Title for the Card!</h1>
+      <p>
+        Rex Twedt was just an ordinary kid from Omaha, Nebraska. After
+        graduating from Iowa State University with a degree in Biochemistry, he
+        began working at Cargill as a lab technician.
+      </p>
+    </div>
+  </div>
+  <div class="project-card">
+    <div class="project-img">
+      <img src="../img/gallery/01_chromosomes_thumb.jpg" />
+    </div>
+    <div class="project-content">
+      <h1>Title for the Card!</h1>
+      <p>
+        Rex Twedt was just an ordinary kid from Omaha, Nebraska. After
+        graduating from Iowa State University with a degree in Biochemistry, he
+        began working at Cargill as a lab technician.
+      </p>
+    </div>
+  </div>
+  <div class="project-card">
+    <div class="project-img"><img src="../img/gallery/02_hiv_thumb.jpg" /></div>
+    <div class="project-content">
+      <h1>Title for the Card!</h1>
+      <p>
+        Rex Twedt was just an ordinary kid from Omaha, Nebraska. After
+        graduating from Iowa State University with a degree in Biochemistry, he
+        began working at Cargill as a lab technician.
+      </p>
+    </div>
+  </div>
+  <div class="project-card">
+    <div class="project-img">
+      <img src="../img/gallery/06_cochlea_thumb.jpg" />
+    </div>
+    <div class="project-content">
+      <h1>Title for the Card!</h1>
+      <p>
+        Rex Twedt was just an ordinary kid from Omaha, Nebraska. After
+        graduating from Iowa State University with a degree in Biochemistry, he
+        began working at Cargill as a lab technician.
+      </p>
+    </div>
+  </div>
 </div>
