Use full size images instead of thumbnails.

--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -8,7 +8,7 @@
 <div class="projects-wrap">
   <div class="project-card">
     <div class="project-img">
-      <img src="../img/gallery//03_lungs_thumb.jpg" />
+      <img src="../img/gallery/03_lungs.jpg" />
     </div>
     <div class="project-content">
       <h1>Title for the Card!</h1>
@@ -21,7 +21,7 @@
   </div>
   <div class="project-card">
     <div class="project-img">
-      <img src="../img/gallery/01_chromosomes_thumb.jpg" />
+      <img src="../img/gallery/01_chromosomes.jpg" />
     </div>
     <div class="project-content">
       <h1>Title for the Card!</h1>
@@ -33,7 +33,7 @@
     </div>
   </div>
   <div class="project-card">
-    <div class="project-img"><img src="../img/gallery/02_hiv_thumb.jpg" /></div>
+    <div class="project-img"><img src="../img/gallery/02_hiv.jpg" /></div>
     <div class="project-content">
       <h1>Title for the Card!</h1>
       <p>
@@ -45,7 +45,7 @@
   </div>
   <div class="project-card">
     <div class="project-img">
-      <img src="../img/gallery/06_cochlea_thumb.jpg" />
+      <img src="../img/gallery/06_cochlea.jpg" />
     </div>
     <div class="project-content">
       <h1>Title for the Card!</h1>
