More tweaking to the 'Projects' page layout.

--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -13,8 +13,10 @@
     <div class="project-content">
       <h1>Title for the Card!</h1>
       <p>
-        Rex Twedt was just an ordinary kid from Omaha, Nebraska. After
-        graduating from Iowa State University with a degree in Biochemistry, he
+        Rex Twedt was just an ordinary kid from Omaha, Nebraska.
+      </p>
+      <p>
+        After graduating from Iowa State University with a degree in Biochemistry, he
         began working at Cargill as a lab technician.
       </p>
     </div>
@@ -26,8 +28,10 @@
     <div class="project-content">
       <h1>Title for the Card!</h1>
       <p>
-        Rex Twedt was just an ordinary kid from Omaha, Nebraska. After
-        graduating from Iowa State University with a degree in Biochemistry, he
+        Rex Twedt was just an ordinary kid from Omaha, Nebraska.
+      </p>
+      <p>
+        After graduating from Iowa State University with a degree in Biochemistry, he
         began working at Cargill as a lab technician.
       </p>
     </div>
@@ -37,8 +41,10 @@
     <div class="project-content">
       <h1>Title for the Card!</h1>
       <p>
-        Rex Twedt was just an ordinary kid from Omaha, Nebraska. After
-        graduating from Iowa State University with a degree in Biochemistry, he
+        Rex Twedt was just an ordinary kid from Omaha, Nebraska.
+      </p>
+      <p>
+        After graduating from Iowa State University with a degree in Biochemistry, he
         began working at Cargill as a lab technician.
       </p>
     </div>
@@ -50,8 +56,10 @@
     <div class="project-content">
       <h1>Title for the Card!</h1>
       <p>
-        Rex Twedt was just an ordinary kid from Omaha, Nebraska. After
-        graduating from Iowa State University with a degree in Biochemistry, he
+        Rex Twedt was just an ordinary kid from Omaha, Nebraska.
+      </p>
+      <p>
+        After graduating from Iowa State University with a degree in Biochemistry, he
         began working at Cargill as a lab technician.
       </p>
     </div>
