Experimenting with Lit Elements.

--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -6,6 +6,7 @@
   <div class="filter">Teaching</div>
 </div>
 <div class="projects-wrap">
+  <project-card></project-card>
   <div class="project-card">
     <div class="project-img">
       <img src="../img/gallery/03_lungs.jpg" />
@@ -16,8 +17,8 @@
         Rex Twedt was just an ordinary kid from Omaha, Nebraska.
       </p>
       <p>
-        After graduating from Iowa State University with a degree in Biochemistry, he
-        began working at Cargill as a lab technician.
+        After graduating from Iowa State University with a degree in
+        Biochemistry, he began working at Cargill as a lab technician.
       </p>
     </div>
   </div>
@@ -31,8 +32,8 @@
         Rex Twedt was just an ordinary kid from Omaha, Nebraska.
       </p>
       <p>
-        After graduating from Iowa State University with a degree in Biochemistry, he
-        began working at Cargill as a lab technician.
+        After graduating from Iowa State University with a degree in
+        Biochemistry, he began working at Cargill as a lab technician.
       </p>
     </div>
   </div>
@@ -44,8 +45,8 @@
         Rex Twedt was just an ordinary kid from Omaha, Nebraska.
       </p>
       <p>
-        After graduating from Iowa State University with a degree in Biochemistry, he
-        began working at Cargill as a lab technician.
+        After graduating from Iowa State University with a degree in
+        Biochemistry, he began working at Cargill as a lab technician.
       </p>
     </div>
   </div>
@@ -59,8 +60,8 @@
         Rex Twedt was just an ordinary kid from Omaha, Nebraska.
       </p>
       <p>
-        After graduating from Iowa State University with a degree in Biochemistry, he
-        began working at Cargill as a lab technician.
+        After graduating from Iowa State University with a degree in
+        Biochemistry, he began working at Cargill as a lab technician.
       </p>
     </div>
   </div>
